"""
all build config
"""
module(name = "sserver")

# go
bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.44.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "platforms", version = "1.0.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
# go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")
use_repo(go_deps, "com_github_rs_zerolog", "com_github_urfave_cli_v3", "org_golang_x_sys")

# c++

bazel_dep(name = "rules_cc", version = "0.1.4")

# bazel_dep(name = "wolfd_bazel_compile_commands", version = "0.5.2")
bazel_dep(name = "asio", version = "1.34.2")
bazel_dep(name = "spdlog", version = "1.15.3")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "20.1.2",
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

# bazel_dep(name = "rules_python", version = "1.5.1")
