
[workspace]
members = ["proxy", "sserver"]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["derive"] }
httparse = "1.9.5"
mimalloc = "0.1"
mio = { version = "1.0.2", features = ["log", "net"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "debuginfo"
