
[workspace]
members = ["proxy", "sserver"]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
httparse = "1.10.0"
mimalloc = "0.1"
mio = { version = "1.0.3", features = ["log", "net"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "debuginfo"
