aux_source_directory(. DIR_LIB_SRCS)

set(LIB_NAME proxy)

add_library(${LIB_NAME} STATIC ${DIR_LIB_SRCS})

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)

target_link_libraries(${LIB_NAME}
	PRIVATE asio::asio
	PRIVATE spdlog::spdlog
)
