[package]
edition.workspace = true
name = "sserver"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
proxy = { path = "../proxy", version = "*" }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
